# tsx-ssr

./: README.md
dragona/: .gitignore  Cargo.toml
dragona/src/: handlers.rs  lib.rs  macros.rs  template.rs
example/: Cargo.toml  NOTES.md  README.md  index.ts
example/react-src/: package-lock.json  package.json  rspack.config.js  sampleOutput.json  tsconfig.json
example/react-src/public/: index.html
example/react-src/src/: App.tsx  client.tsx  index.css  index.html  index.tsx  server.tsx
example/react-src/src/components/: NavBar.tsx  News.tsx  NewsItem.tsx  Spinner.tsx
example/src/: handlers.rs  main.rs
