[package]
name = "dragona"
version = "0.0.1"
authors = ["Kinjalk Tripathi <kinjalkt3@gmail.com>"]
edition = "2021"

[dependencies]
swc = "0.273.22"
anyhow = "1"
swc_common = "0.33.20"
hyper = "1.2.0"
tokio = { version = "1", features = ["full"] }
swc_bundler = "0.225.17"
swc_ecma_parser = "0.143.10"
swc_ecma_transforms = "0.229.17"
swc_ecma_visit = "0.98.7"
swc_ecma_codegen = "0.148.12"
